[tool.poetry]
name = "eia"
version = "1.0.0"
description = ""
authors = ["caique cober <caique.cober.souza@gmail.com>"]
readme = "README.md"
packages = [{ include = "openbb_eia" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openbb-core = { version = "^1.1.0" }
openbb-devtools = { version = "^1.0.0b1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_eia = "openbb_eia.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
openbb_eia = "openbb_eia.provider:provider"
